# DCC-esp32

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  partitions.csv
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: quality-gate.yml  test.yml
docs/hardware/: breadboard-wiring-guide.md
docs/specs/: NMRA-STANDARDS.md
src/: boot.rs  config.rs  control_buttons.rs  control_logic.rs  display.rs  fault_manager.rs  lib.rs  short_detector.rs  status_led.rs  system_status.rs
src/dcc/: cv.rs  encoder.rs  engine.rs  mod.rs  packet.rs  rmt_driver.rs  scheduler.rs  speed28.rs  timing.rs  validator.rs
src/net/: mod.rs  udp_control.rs  z21_proto.rs
